--- a/docs/api/qiskit/dev/qiskit.primitives.BackendSamplerV2.mdx
+++ b/docs/api/qiskit/dev/qiskit.primitives.BackendSamplerV2.mdx
@@ -57,7 +57,7 @@ python_api_name: qiskit.primitives.BackendSamplerV2
 
     **Parameters**
 
-    *   **pubs** ([*Iterable*](https://docs.python.org/3/library/typing.html#typing.Iterable "(in Python v3.13)")*\[*[*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit")  *|*[*Tuple*](https://docs.python.org/3/library/typing.html#typing.Tuple "(in Python v3.13)")*\[*[*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit")*] |* [*Tuple*](https://docs.python.org/3/library/typing.html#typing.Tuple "(in Python v3.13)")*\[*[*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit")*,* [*Mapping*](https://docs.python.org/3/library/typing.html#typing.Mapping "(in Python v3.13)")*\[*[*Parameter*](qiskit.circuit.Parameter "qiskit.circuit.parameter.Parameter")  *|*[*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")  *|*[*Tuple*](https://docs.python.org/3/library/typing.html#typing.Tuple "(in Python v3.13)")*\[*[*Parameter*](qiskit.circuit.Parameter "qiskit.circuit.parameter.Parameter")  *|*[*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")*, ...],* [*Buffer*](https://docs.python.org/3/library/collections.abc.html#collections.abc.Buffer "(in Python v3.13)") *| \_SupportsArray\[*[*dtype*](https://numpy.org/doc/stable/reference/generated/numpy.dtype.html#numpy.dtype "(in NumPy v2.1)")*\[*[*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")*]] | \_NestedSequence\[\_SupportsArray\[*[*dtype*](https://numpy.org/doc/stable/reference/generated/numpy.dtype.html#numpy.dtype "(in NumPy v2.1)")*\[*[*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")*]]] |* [*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")  *|*[*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")  *|*[*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.13)")  *|*[*complex*](https://docs.python.org/3/library/functions.html#complex "(in Python v3.13)")  *|*[*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")  *|*[*bytes*](https://docs.python.org/3/library/stdtypes.html#bytes "(in Python v3.13)") *| \_NestedSequence\[*[*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")  *|*[*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")  *|*[*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.13)")  *|*[*complex*](https://docs.python.org/3/library/functions.html#complex "(in Python v3.13)")  *|*[*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")  *|*[*bytes*](https://docs.python.org/3/library/stdtypes.html#bytes "(in Python v3.13)")*]]] |* [*Tuple*](https://docs.python.org/3/library/typing.html#typing.Tuple "(in Python v3.13)")*\[*[*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit")*,* [*Mapping*](https://docs.python.org/3/library/typing.html#typing.Mapping "(in Python v3.13)")*\[*[*Parameter*](qiskit.circuit.Parameter "qiskit.circuit.parameter.Parameter")  *|*[*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")  *|*[*Tuple*](https://docs.python.org/3/library/typing.html#typing.Tuple "(in Python v3.13)")*\[*[*Parameter*](qiskit.circuit.Parameter "qiskit.circuit.parameter.Parameter")  *|*[*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")*, ...],* [*Buffer*](https://docs.python.org/3/library/collections.abc.html#collections.abc.Buffer "(in Python v3.13)") *| \_SupportsArray\[*[*dtype*](https://numpy.org/doc/stable/reference/generated/numpy.dtype.html#numpy.dtype "(in NumPy v2.1)")*\[*[*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")*]] | \_NestedSequence\[\_SupportsArray\[*[*dtype*](https://numpy.org/doc/stable/reference/generated/numpy.dtype.html#numpy.dtype "(in NumPy v2.1)")*\[*[*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")*]]] |* [*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")  *|*[*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")  *|*[*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.13)")  *|*[*complex*](https://docs.python.org/3/library/functions.html#complex "(in Python v3.13)")  *|*[*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")  *|*[*bytes*](https://docs.python.org/3/library/stdtypes.html#bytes "(in Python v3.13)") *| \_NestedSequence\[*[*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")  *|*[*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")  *|*[*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.13)")  *|*[*complex*](https://docs.python.org/3/library/functions.html#complex "(in Python v3.13)")  *|*[*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")  *|*[*bytes*](https://docs.python.org/3/library/stdtypes.html#bytes "(in Python v3.13)")*]],* [*Integral*](https://docs.python.org/3/library/numbers.html#numbers.Integral "(in Python v3.13)") *| None]]*) – An iterable of pub-like objects. For example, a list of circuits or tuples `(circuit, parameter_values)`.
+    *   **pubs** ([*Iterable*](https://docs.python.org/3/library/typing.html#typing.Iterable "(in Python v3.13)")*\[SamplerPubLike]*) – An iterable of pub-like objects. For example, a list of circuits or tuples `(circuit, parameter_values)`.
     *   **shots** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)") *| None*) – The total number of shots to sample for each sampler pub that does not specify its own shots. If `None`, the primitive’s default shots value will be used, which can vary by implementation.
 
     **Returns**
