--- a/docs/api/qiskit/dev/qiskit.quantum_info.Choi.mdx
+++ b/docs/api/qiskit/dev/qiskit.quantum_info.Choi.mdx
@@ -8,7 +8,7 @@ python_api_name: qiskit.quantum_info.Choi
 
 # Choi
 
-<Class id="qiskit.quantum_info.Choi" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/choi.py#L36-L209" signature="qiskit.quantum_info.Choi(data, input_dims=None, output_dims=None)" modifiers="class">
+<Class id="qiskit.quantum_info.Choi" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/choi.py#L41-L214" signature="qiskit.quantum_info.Choi(data, input_dims=None, output_dims=None)" modifiers="class">
   Bases: `QuantumChannel`
 
   Choi-matrix representation of a Quantum Channel.
@@ -39,7 +39,7 @@ $$
 
   **Parameters**
 
-  *   **data** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")  *|*[*Instruction*](qiskit.circuit.Instruction "qiskit.circuit.Instruction") *| BaseOperator | np.ndarray*) – data to initialize superoperator.
+  *   **data** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")  *|*[*circuit.instruction.Instruction*](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction") *| BaseOperator | np.ndarray*) – data to initialize superoperator.
   *   **input\_dims** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")  *|*[*tuple*](https://docs.python.org/3/library/stdtypes.html#tuple "(in Python v3.13)") *| None*) – the input subsystem dimensions.
   *   **output\_dims** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")  *|*[*tuple*](https://docs.python.org/3/library/stdtypes.html#tuple "(in Python v3.13)") *| None*) – the output subsystem dimensions.
 
@@ -109,7 +109,7 @@ $$
 
   ### compose
 
-  <Function id="qiskit.quantum_info.Choi.compose" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/choi.py#L165-L190" signature="compose(other, qargs=None, front=False)">
+  <Function id="qiskit.quantum_info.Choi.compose" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/choi.py#L170-L195" signature="compose(other, qargs=None, front=False)">
     Return the operator composition with another Choi.
 
     **Parameters**
@@ -139,7 +139,7 @@ $$
 
   ### conjugate
 
-  <Function id="qiskit.quantum_info.Choi.conjugate" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/choi.py#L149-L152" signature="conjugate()">
+  <Function id="qiskit.quantum_info.Choi.conjugate" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/choi.py#L154-L157" signature="conjugate()">
     Return the conjugate quantum channel.
 
     <Admonition title="Note" type="note">
@@ -178,7 +178,7 @@ $$
 
   ### expand
 
-  <Function id="qiskit.quantum_info.Choi.expand" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/choi.py#L197-L200" signature="expand(other)">
+  <Function id="qiskit.quantum_info.Choi.expand" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/choi.py#L202-L205" signature="expand(other)">
     Return the reverse-order tensor product with another Choi.
 
     **Parameters**
@@ -320,7 +320,7 @@ $$
 
   ### tensor
 
-  <Function id="qiskit.quantum_info.Choi.tensor" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/choi.py#L192-L195" signature="tensor(other)">
+  <Function id="qiskit.quantum_info.Choi.tensor" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/choi.py#L197-L200" signature="tensor(other)">
     Return the tensor product with another Choi.
 
     **Parameters**
@@ -374,7 +374,7 @@ $$
 
   ### transpose
 
-  <Function id="qiskit.quantum_info.Choi.transpose" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/choi.py#L154-L163" signature="transpose()">
+  <Function id="qiskit.quantum_info.Choi.transpose" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/choi.py#L159-L168" signature="transpose()">
     Return the transpose quantum channel.
 
     <Admonition title="Note" type="note">
