--- a/docs/api/qiskit/dev/qiskit.quantum_info.DensityMatrix.mdx
+++ b/docs/api/qiskit/dev/qiskit.quantum_info.DensityMatrix.mdx
@@ -8,7 +8,7 @@ python_api_name: qiskit.quantum_info.DensityMatrix
 
 # DensityMatrix
 
-<Class id="qiskit.quantum_info.DensityMatrix" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/states/densitymatrix.py#L41-L842" signature="qiskit.quantum_info.DensityMatrix(data, dims=None)" modifiers="class">
+<Class id="qiskit.quantum_info.DensityMatrix" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/states/densitymatrix.py#L45-L846" signature="qiskit.quantum_info.DensityMatrix(data, dims=None)" modifiers="class">
   Bases: `QuantumState`, `TolerancesMixin`
 
   DensityMatrix class
@@ -17,7 +17,7 @@ python_api_name: qiskit.quantum_info.DensityMatrix
 
   **Parameters**
 
-  *   **data** (*np.ndarray |* [*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)")  *|*[*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")  *|*[*Instruction*](qiskit.circuit.Instruction "qiskit.circuit.Instruction") *| QuantumState*) – A statevector, quantum instruction or an object with a `to_operator` or `to_matrix` method from which the density matrix can be constructed. If a vector the density matrix is constructed as the projector of that vector. If a quantum instruction, the density matrix is constructed by assuming all qubits are initialized in the zero state.
+  *   **data** (*np.ndarray |* [*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)")  *|*[*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")  *|*[*circuit.instruction.Instruction*](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction") *| QuantumState*) – A statevector, quantum instruction or an object with a `to_operator` or `to_matrix` method from which the density matrix can be constructed. If a vector the density matrix is constructed as the projector of that vector. If a quantum instruction, the density matrix is constructed by assuming all qubits are initialized in the zero state.
   *   **dims** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")  *|*[*tuple*](https://docs.python.org/3/library/stdtypes.html#tuple "(in Python v3.13)")  *|*[*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)") *| None*) – The subsystem dimension of the state (See additional information).
 
   **Raises**
@@ -69,7 +69,7 @@ python_api_name: qiskit.quantum_info.DensityMatrix
 
   ### conjugate
 
-  <Function id="qiskit.quantum_info.DensityMatrix.conjugate" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/states/densitymatrix.py#L209-L211" signature="conjugate()">
+  <Function id="qiskit.quantum_info.DensityMatrix.conjugate" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/states/densitymatrix.py#L213-L215" signature="conjugate()">
     Return the conjugate of the density matrix.
   </Function>
 
@@ -87,7 +87,7 @@ python_api_name: qiskit.quantum_info.DensityMatrix
 
   ### draw
 
-  <Function id="qiskit.quantum_info.DensityMatrix.draw" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/states/densitymatrix.py#L133-L173" signature="draw(output=None, **drawer_args)">
+  <Function id="qiskit.quantum_info.DensityMatrix.draw" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/states/densitymatrix.py#L137-L177" signature="draw(output=None, **drawer_args)">
     Return a visualization of the Statevector.
 
     **repr**: ASCII TextMatrix of the state’s `__repr__`.
@@ -120,7 +120,7 @@ python_api_name: qiskit.quantum_info.DensityMatrix
 
   ### evolve
 
-  <Function id="qiskit.quantum_info.DensityMatrix.evolve" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/states/densitymatrix.py#L301-L340" signature="evolve(other, qargs=None)">
+  <Function id="qiskit.quantum_info.DensityMatrix.evolve" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/states/densitymatrix.py#L305-L344" signature="evolve(other, qargs=None)">
     Evolve a quantum state by an operator.
 
     **Parameters**
@@ -144,7 +144,7 @@ python_api_name: qiskit.quantum_info.DensityMatrix
 
   ### expand
 
-  <Function id="qiskit.quantum_info.DensityMatrix.expand" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/states/densitymatrix.py#L244-L261" signature="expand(other)">
+  <Function id="qiskit.quantum_info.DensityMatrix.expand" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/states/densitymatrix.py#L248-L265" signature="expand(other)">
     Return the tensor product state other ⊗ self.
 
     **Parameters**
@@ -166,7 +166,7 @@ python_api_name: qiskit.quantum_info.DensityMatrix
 
   ### expectation\_value
 
-  <Function id="qiskit.quantum_info.DensityMatrix.expectation_value" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/states/densitymatrix.py#L397-L418" signature="expectation_value(oper, qargs=None)">
+  <Function id="qiskit.quantum_info.DensityMatrix.expectation_value" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/states/densitymatrix.py#L401-L422" signature="expectation_value(oper, qargs=None)">
     Compute the expectation value of an operator.
 
     **Parameters**
@@ -185,7 +185,7 @@ python_api_name: qiskit.quantum_info.DensityMatrix
 
   ### from\_instruction
 
-  <Function id="qiskit.quantum_info.DensityMatrix.from_instruction" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/states/densitymatrix.py#L597-L624" signature="from_instruction(instruction)" modifiers="classmethod">
+  <Function id="qiskit.quantum_info.DensityMatrix.from_instruction" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/states/densitymatrix.py#L601-L628" signature="from_instruction(instruction)" modifiers="classmethod">
     Return the output density matrix of an instruction.
 
     The statevector is initialized in the state $|{0,\ldots,0}\rangle$ of the same number of qubits as the input instruction or circuit, evolved by the input instruction, and the output statevector returned.
@@ -209,7 +209,7 @@ python_api_name: qiskit.quantum_info.DensityMatrix
 
   ### from\_int
 
-  <Function id="qiskit.quantum_info.DensityMatrix.from_int" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/states/densitymatrix.py#L569-L595" signature="from_int(i, dims)" modifiers="static">
+  <Function id="qiskit.quantum_info.DensityMatrix.from_int" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/states/densitymatrix.py#L573-L599" signature="from_int(i, dims)" modifiers="static">
     Return a computational basis state density matrix.
 
     **Parameters**
@@ -235,7 +235,7 @@ python_api_name: qiskit.quantum_info.DensityMatrix
 
   ### from\_label
 
-  <Function id="qiskit.quantum_info.DensityMatrix.from_label" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/states/densitymatrix.py#L533-L567" signature="from_label(label)" modifiers="classmethod">
+  <Function id="qiskit.quantum_info.DensityMatrix.from_label" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/states/densitymatrix.py#L537-L571" signature="from_label(label)" modifiers="classmethod">
     Return a tensor product of Pauli X,Y,Z eigenstates.
 
     | Label | Statevector                                                 |
@@ -266,7 +266,7 @@ python_api_name: qiskit.quantum_info.DensityMatrix
 
   ### is\_valid
 
-  <Function id="qiskit.quantum_info.DensityMatrix.is_valid" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/states/densitymatrix.py#L189-L202" signature="is_valid(atol=None, rtol=None)">
+  <Function id="qiskit.quantum_info.DensityMatrix.is_valid" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/states/densitymatrix.py#L193-L206" signature="is_valid(atol=None, rtol=None)">
     Return True if trace 1 and positive semidefinite.
   </Function>
 
@@ -294,7 +294,7 @@ python_api_name: qiskit.quantum_info.DensityMatrix
 
   ### partial\_transpose
 
-  <Function id="qiskit.quantum_info.DensityMatrix.partial_transpose" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/states/densitymatrix.py#L825-L842" signature="partial_transpose(qargs)">
+  <Function id="qiskit.quantum_info.DensityMatrix.partial_transpose" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/states/densitymatrix.py#L829-L846" signature="partial_transpose(qargs)">
     Return partially transposed density matrix.
 
     **Parameters**
@@ -312,7 +312,7 @@ python_api_name: qiskit.quantum_info.DensityMatrix
 
   ### probabilities
 
-  <Function id="qiskit.quantum_info.DensityMatrix.probabilities" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/states/densitymatrix.py#L420-L500" signature="probabilities(qargs=None, decimals=None)">
+  <Function id="qiskit.quantum_info.DensityMatrix.probabilities" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/states/densitymatrix.py#L424-L504" signature="probabilities(qargs=None, decimals=None)">
     Return the subsystem measurement probability vector.
 
     Measurement probabilities are with respect to measurement in the computation (diagonal) basis.
@@ -406,13 +406,13 @@ python_api_name: qiskit.quantum_info.DensityMatrix
 
   ### purity
 
-  <Function id="qiskit.quantum_info.DensityMatrix.purity" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/states/densitymatrix.py#L217-L223" signature="purity()">
+  <Function id="qiskit.quantum_info.DensityMatrix.purity" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/states/densitymatrix.py#L221-L227" signature="purity()">
     Return the purity of the quantum state.
   </Function>
 
   ### reset
 
-  <Function id="qiskit.quantum_info.DensityMatrix.reset" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/states/densitymatrix.py#L502-L531" signature="reset(qargs=None)">
+  <Function id="qiskit.quantum_info.DensityMatrix.reset" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/states/densitymatrix.py#L506-L535" signature="reset(qargs=None)">
     Reset state or subsystems to the 0-state.
 
     **Parameters**
@@ -434,7 +434,7 @@ python_api_name: qiskit.quantum_info.DensityMatrix
 
   ### reverse\_qargs
 
-  <Function id="qiskit.quantum_info.DensityMatrix.reverse_qargs" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/states/densitymatrix.py#L342-L362" signature="reverse_qargs()">
+  <Function id="qiskit.quantum_info.DensityMatrix.reverse_qargs" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/states/densitymatrix.py#L346-L366" signature="reverse_qargs()">
     Return a DensityMatrix with reversed subsystem ordering.
 
     For a tensor product state this is equivalent to reversing the order of tensor product subsystems. For a density matrix $\rho = \rho_{n-1} \otimes ... \otimes \rho_0$ the returned state will be $\rho_0 \otimes ... \otimes \rho_{n-1}$.
@@ -506,7 +506,7 @@ python_api_name: qiskit.quantum_info.DensityMatrix
 
   ### tensor
 
-  <Function id="qiskit.quantum_info.DensityMatrix.tensor" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/states/densitymatrix.py#L225-L242" signature="tensor(other)">
+  <Function id="qiskit.quantum_info.DensityMatrix.tensor" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/states/densitymatrix.py#L229-L246" signature="tensor(other)">
     Return the tensor product state self ⊗ other.
 
     **Parameters**
@@ -528,7 +528,7 @@ python_api_name: qiskit.quantum_info.DensityMatrix
 
   ### to\_dict
 
-  <Function id="qiskit.quantum_info.DensityMatrix.to_dict" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/states/densitymatrix.py#L626-L704" signature="to_dict(decimals=None)">
+  <Function id="qiskit.quantum_info.DensityMatrix.to_dict" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/states/densitymatrix.py#L630-L708" signature="to_dict(decimals=None)">
     Convert the density matrix to dictionary form.
 
     This dictionary representation uses a Ket-like notation where the dictionary keys are qudit strings for the subsystem basis vectors. If any subsystem has a dimension greater than 10 comma delimiters are inserted between integers so that subsystems can be distinguished.
@@ -604,7 +604,7 @@ python_api_name: qiskit.quantum_info.DensityMatrix
 
   ### to\_operator
 
-  <Function id="qiskit.quantum_info.DensityMatrix.to_operator" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/states/densitymatrix.py#L204-L207" signature="to_operator()">
+  <Function id="qiskit.quantum_info.DensityMatrix.to_operator" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/states/densitymatrix.py#L208-L211" signature="to_operator()">
     Convert to Operator
 
     **Return type**
@@ -614,7 +614,7 @@ python_api_name: qiskit.quantum_info.DensityMatrix
 
   ### to\_statevector
 
-  <Function id="qiskit.quantum_info.DensityMatrix.to_statevector" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/states/densitymatrix.py#L793-L823" signature="to_statevector(atol=None, rtol=None)">
+  <Function id="qiskit.quantum_info.DensityMatrix.to_statevector" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/states/densitymatrix.py#L797-L827" signature="to_statevector(atol=None, rtol=None)">
     Return a statevector from a pure density matrix.
 
     **Parameters**
@@ -639,7 +639,7 @@ python_api_name: qiskit.quantum_info.DensityMatrix
 
   ### trace
 
-  <Function id="qiskit.quantum_info.DensityMatrix.trace" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/states/densitymatrix.py#L213-L215" signature="trace()">
+  <Function id="qiskit.quantum_info.DensityMatrix.trace" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/states/densitymatrix.py#L217-L219" signature="trace()">
     Return the trace of the density matrix.
   </Function>
 </Class>
