--- a/docs/api/qiskit/dev/qiskit.quantum_info.Stinespring.mdx
+++ b/docs/api/qiskit/dev/qiskit.quantum_info.Stinespring.mdx
@@ -8,7 +8,7 @@ python_api_name: qiskit.quantum_info.Stinespring
 
 # Stinespring
 
-<Class id="qiskit.quantum_info.Stinespring" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/stinespring.py#L36-L287" signature="qiskit.quantum_info.Stinespring(data, input_dims=None, output_dims=None)" modifiers="class">
+<Class id="qiskit.quantum_info.Stinespring" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/stinespring.py#L40-L291" signature="qiskit.quantum_info.Stinespring(data, input_dims=None, output_dims=None)" modifiers="class">
   Bases: `QuantumChannel`
 
   Stinespring representation of a quantum channel.
@@ -37,7 +37,7 @@ $$
 
   **Parameters**
 
-  *   **data** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")  *|*[*Instruction*](qiskit.circuit.Instruction "qiskit.circuit.Instruction") *| BaseOperator | np.ndarray*) – data to initialize superoperator.
+  *   **data** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")  *|*[*circuit.instruction.Instruction*](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction") *| BaseOperator | np.ndarray*) – data to initialize superoperator.
   *   **input\_dims** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")  *|*[*tuple*](https://docs.python.org/3/library/stdtypes.html#tuple "(in Python v3.13)") *| None*) – the input subsystem dimensions.
   *   **output\_dims** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")  *|*[*tuple*](https://docs.python.org/3/library/stdtypes.html#tuple "(in Python v3.13)") *| None*) – the output subsystem dimensions.
 
@@ -105,7 +105,7 @@ $$
 
   ### compose
 
-  <Function id="qiskit.quantum_info.Stinespring.compose" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/stinespring.py#L192-L201" signature="compose(other, qargs=None, front=False)">
+  <Function id="qiskit.quantum_info.Stinespring.compose" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/stinespring.py#L196-L205" signature="compose(other, qargs=None, front=False)">
     Return the operator composition with another Stinespring.
 
     **Parameters**
@@ -135,7 +135,7 @@ $$
 
   ### conjugate
 
-  <Function id="qiskit.quantum_info.Stinespring.conjugate" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/stinespring.py#L169-L176" signature="conjugate()">
+  <Function id="qiskit.quantum_info.Stinespring.conjugate" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/stinespring.py#L173-L180" signature="conjugate()">
     Return the conjugate quantum channel.
 
     <Admonition title="Note" type="note">
@@ -174,7 +174,7 @@ $$
 
   ### expand
 
-  <Function id="qiskit.quantum_info.Stinespring.expand" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/stinespring.py#L208-L211" signature="expand(other)">
+  <Function id="qiskit.quantum_info.Stinespring.expand" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/stinespring.py#L212-L215" signature="expand(other)">
     Return the reverse-order tensor product with another Stinespring.
 
     **Parameters**
@@ -215,7 +215,7 @@ $$
 
   ### is\_cptp
 
-  <Function id="qiskit.quantum_info.Stinespring.is_cptp" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/stinespring.py#L151-L160" signature="is_cptp(atol=None, rtol=None)">
+  <Function id="qiskit.quantum_info.Stinespring.is_cptp" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/stinespring.py#L155-L164" signature="is_cptp(atol=None, rtol=None)">
     Return True if completely-positive trace-preserving.
   </Function>
 
@@ -307,7 +307,7 @@ $$
 
   ### tensor
 
-  <Function id="qiskit.quantum_info.Stinespring.tensor" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/stinespring.py#L203-L206" signature="tensor(other)">
+  <Function id="qiskit.quantum_info.Stinespring.tensor" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/stinespring.py#L207-L210" signature="tensor(other)">
     Return the tensor product with another Stinespring.
 
     **Parameters**
@@ -361,7 +361,7 @@ $$
 
   ### transpose
 
-  <Function id="qiskit.quantum_info.Stinespring.transpose" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/stinespring.py#L178-L190" signature="transpose()">
+  <Function id="qiskit.quantum_info.Stinespring.transpose" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/stinespring.py#L182-L194" signature="transpose()">
     Return the transpose quantum channel.
 
     <Admonition title="Note" type="note">
